# cogsci-llm-concepts

./: README.md  pyproject.toml
cogsci/: common.py
cogsci/activations/: importer.py
cogsci/ai/: model_manager.py
cogsci/glasgow_norms/: loader.py
cogsci/notebooks/: 1 step - ACTIVATION EXTRACTOR - Cogsci Thesis Mistral  1 step - ACTIVATION EXTRACTOR - Cogsci Thesis Mistral.ipynb  2 step - Parquets Gatherer.ipynb  3 step - PROBE Data Analysis  3 step - PROBE Data Analysis.ipynb
cogsci/probing/: data_processor.py  probe_executor.py
cosgci/glasgow_norms/: loader.py
